--- a/production_config_pos.yaml
+++ b/production_config_pos.yaml
@@ -19,3 +19,5 @@ application-context}/tenants/${tenantId}/stores/${storeId}/"/> </parameters>
 --ADD DARK MODE--
 
 --ADD LOYALTY--
+
+--ADD REWARDS--
